--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.0",
     "recharts": "^2.1.8",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.3.6",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
